# mokumo

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .npmrc  .oxlintrc.json  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUALITY.md  README.md  SECURITY.md  crap4rs.toml  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spa-embedding-boundary-decision.md
.cargo/: config.toml  (+1 more)
crates/db/: Cargo.toml
crates/db/src/: lib.rs  restore.rs
crates/db/src/activity/: mod.rs  repo.rs
crates/db/src/customer/: repo.rs
crates/db/src/migration/: m20260324_000001_customers_and_activity.rs  m20260327_000000_users_and_roles.rs  m20260404_000000_set_pragmas.rs  m20260416_000000_login_lockout.rs  mod.rs
crates/db/src/shop/: mod.rs  repo.rs
crates/db/src/user/: password.rs  repo.rs
crates/db/tests/: database_init.rs  entity_drift.rs  first_run.rs  migration_safety.rs  schema_conventions.rs  seaorm_migration.rs  startup_guards.rs  upgrade_path.rs  user_repo.rs
crates/db/tests/bdd_world/: customer_steps.rs  install_validation_steps.rs  migration_safety_steps.rs  mod.rs  restore_steps.rs  storage_diagnostics_steps.rs
crates/db/tests/features/: install_validation.feature  transaction_atomicity.feature
crates/kikan-socket/: Cargo.toml
crates/kikan-socket/src/: lib.rs
crates/kikan-tauri/: Cargo.toml
crates/kikan-tauri/src/: net.rs
crates/mokumo-shop/: AGENTS.md  Cargo.toml  moon.yml
crates/mokumo-shop/src/: cli.rs  db.rs  demo_reset.rs  graft.rs  lib.rs  lifecycle.rs  profile_switch.rs  restore.rs  routes.rs  setup.rs  startup.rs  state.rs
crates/mokumo-shop/src/admin/: diagnostics.rs  mod.rs  profile_list.rs  router.rs
crates/mokumo-shop/src/auth/: handlers.rs  mod.rs  recovery_artifact.rs
crates/mokumo-shop/src/auth_handlers/: reset.rs
crates/mokumo-shop/src/customer/: adapter.rs  error.rs  handler.rs  mod.rs  service.rs
crates/mokumo-shop/src/migrations/: m20260324_000001_customers_and_activity.rs  m20260327_000000_users_and_roles.rs
crates/mokumo-shop/src/sequence/: adapter.rs
crates/mokumo-shop/src/shop/: adapter.rs  handler.rs  logo_validator.rs
crates/mokumo-shop/src/types/: customer.rs  mod.rs
crates/mokumo-shop/src/ws/: manager.rs
crates/mokumo-shop/tests/: admin_uds.rs  auth_reset_regressions.rs  error_handling.rs  platform_user_repo.rs  port_fallback.rs
crates/mokumo-shop/tests/api_bdd_world/: auth_steps.rs  demo_steps.rs  diagnostics_steps.rs  ephemeral_bind_steps.rs  health_steps.rs  mod.rs  port_fallback_steps.rs  restore_steps.rs
crates/mokumo-shop/tests/api_features/: shop_restore.feature
(+575 files in other folders)
