[package]
name = "mokumo-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
mokumo-core = { workspace = true }
kikan = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
password-auth = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
cucumber = { workspace = true }
# Test-only dependency: integration tests under `tests/` exercise the
# migrator (owned by mokumo-shop after S2.5) against the database layer.
# Intentionally dev-only — mokumo-db must not pull mokumo-shop into the
# runtime dependency graph (the direction is shop → db, not the reverse).
mokumo-shop = { workspace = true }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
