[package]
name = "kikan-socket"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan Unix domain socket adapter — daemon listener and permission enforcement"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
