[package]
name = "kikan-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan Tauri IPC adapter — thin #[tauri::command] wrappers over kikan::platform handlers"

[dependencies]
kikan = { workspace = true }
# `tauri` is aspirational — #[tauri::command] wrappers are not yet wired.
# Keeping it out of [dependencies] for now avoids dragging `glib-sys` /
# `libglib2.0-dev` into CI hosts that only build the Linux headless slice.
# (mokumo-shop dev-deps kikan-tauri for the BDD ephemeral-bind steps; see
# crates/mokumo-shop/Cargo.toml.)
tokio = { workspace = true }
tracing = { workspace = true }
